--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,9 @@
 m4_define([__VERSION_MAJOR__], [0])
 m4_define([__VERSION_MINOR__], [7])
 m4_define([__VERSION_MICRO__], [9])
-m4_define([__VERSION_SUFFIX__], [git])
+m4_define([__VERSION_SUFFIX__], [-git])
 
-AC_INIT([libcap_utils],[__VERSION_MAJOR__.__VERSION_MINOR__.__VERSION_MICRO__-__VERSION_SUFFIX__],[dsv@bth.se])
+AC_INIT([libcap_utils], m4_join([],m4_join([.], __VERSION_MAJOR__, __VERSION_MINOR__, __VERSION_MICRO__), __VERSION_SUFFIX__), [dsv@bth.se])
 
 VERSION_MAJOR=__VERSION_MAJOR__
 VERSION_MINOR=__VERSION_MINOR__
@@ -28,8 +28,8 @@ AC_CONFIG_FILES([
 AC_DEFINE_UNQUOTED([VERSION_MAJOR],  [${VERSION_MAJOR}], [Major version number of package])
 AC_DEFINE_UNQUOTED([VERSION_MINOR],  [${VERSION_MINOR}], [Minor version number of package])
 AC_DEFINE_UNQUOTED([VERSION_MICRO],  [${VERSION_MICRO}], [Micro version number of package])
-AC_DEFINE_UNQUOTED([VERSION_SUFFIX], [${VERSION_SUFFIX}], [Suffix of package (e.g. git)])
-AC_DEFINE_UNQUOTED([VERSION_FULL], ["$VERSION"], [Verson number of package including suffixes (e.g. PF_RING)])
+AC_DEFINE_UNQUOTED([VERSION_SUFFIX], ["${VERSION_SUFFIX}"], [Suffix of package (e.g. git)])
+AC_DEFINE_UNQUOTED([VERSION_FULL],   ["$VERSION"], [Verson number of package including suffixes (e.g. PF_RING)])
 AC_SUBST([VERSION_MAJOR])
 AC_SUBST([VERSION_MINOR])
 AC_SUBST([VERSION_MICRO])
