Add TOP_SRCDIR to point to base directory.

--- a/configure.ac
+++ b/configure.ac
@@ -34,6 +34,7 @@ AC_SUBST([VERSION_MAJOR])
 AC_SUBST([VERSION_MINOR])
 AC_SUBST([VERSION_MICRO])
 AC_SUBST([VERSION_SUFFIX])
+AC_DEFINE_UNQUOTED([TOP_SRCDIR], ["${srcdir}"], [top source directory])
 
 AC_PROG_CC_C_O
 AC_PROG_CC_C99
