--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@ VERSION_MICRO=__VERSION_MICRO__
 VERSION_SUFFIX=__VERSION_SUFFIX__
 
 AC_CONFIG_AUX_DIR([build-aux])
-AM_INIT_AUTOMAKE([1.11 check-news foreign color-tests subdir-objects -Wall -Werror])
+AM_INIT_AUTOMAKE([1.11 foreign color-tests subdir-objects -Wall -Werror])
 AM_SILENT_RULES([yes])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_HEADERS([config.h])
