--- a/configure.ac
+++ b/configure.ac
@@ -43,7 +43,7 @@ AC_PROG_LN_S
 AC_ARG_PROGRAM
 AC_USE_SYSTEM_EXTENSIONS
 AC_DISABLE_STATIC([])
-AM_PROG_AR
+m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
 LT_INIT
 AC_SYS_LARGEFILE
 AC_SEARCH_LIBS([clock_gettime], [rt])
