--- a/Makefile.am
+++ b/Makefile.am
@@ -94,7 +94,7 @@ pkgconfig_DATA = libcap_stream-0.7.pc libcap_filter-0.7.pc libcap_utils-0.7.pc l
 
 libcap_stream_07_la_LDFLAGS = -version-info 2:1:2 ${PFRING_LIBS}
 libcap_stream_07_la_LIBADD = libcap_filter-07.la
-libcap_stream_07_la_SOURCES = stream.c stream.h stream_buffer.c stream_buffer.h stream_file.c
+libcap_stream_07_la_SOURCES = stream.c stream.h stream_buffer.c stream_buffer.h stream_file.c stream_udp.c
 
 if BUILD_PFRING
 libcap_stream_07_la_SOURCES += stream_pfring.c
@@ -116,7 +116,6 @@ libcap_utils_07_la_SOURCES =   \
 	utils.c             \
 	packet.c            \
 	picotime.c
-#	stream_udp.c \
 #	stream_tcp.c
 
 if BUILD_BE64TOH
