Adding version as integer.

--- a/caputils/version.h.in
+++ b/caputils/version.h.in
@@ -31,6 +31,7 @@ extern "C" {
 #define CAPUTILS_VERSION_MAJOR @VERSION_MAJOR@
 #define CAPUTILS_VERSION_MINOR @VERSION_MINOR@
 #define CAPUTILS_VERSION_MICRO @VERSION_MICRO@
+#define CAPUTILS_VERSION_NUM @VERSION_NUM@
 #define CAPUTILS_VERSION "@VERSION@"
 
 #define CAPUTILS_0_7_14 1
