--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,7 @@ VERSION_MAJOR=__VERSION_MAJOR__
 VERSION_MINOR=__VERSION_MINOR__
 VERSION_MICRO=__VERSION_MICRO__
 VERSION_SUFFIX=__VERSION_SUFFIX__
+VERSION_NUM=`printf "0x00%02d%02d%02d\n" ${VERSION_MAJOR} ${VERSION_MINOR} ${VERSION_MICRO}`
 
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([1.11 foreign color-tests subdir-objects -Wall -Werror])
@@ -35,6 +36,7 @@ AC_SUBST([VERSION_MAJOR])
 AC_SUBST([VERSION_MINOR])
 AC_SUBST([VERSION_MICRO])
 AC_SUBST([VERSION_SUFFIX])
+AC_SUBST([VERSION_NUM])
 AC_DEFINE_UNQUOTED([TOP_SRCDIR], ["${srcdir}"], [top source directory])
 
 AX_DEFAULT_CFLAGS([-O2])
